2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

        * ChangeLog, configure.in,
          vicious-extensions/ve-misc.c:  Fix
          build on Darwin.  Fixes bug #322085.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

        * daemon/getvt.c: Fix get_free_vt_linux so
          it returns the correct VT.  Fixes bug
          #322137.  Patch by Frederic Crozat.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

	* gui/gdmlogin.c, gui/greeter/greeter.c: 
	  Fix "==" to "=" in assignment.  Fixes bug
	  #322083, suggestions from dmacks@netspace.org.

2005-11-22  Brian Cameron <Brian.Cameron@sun.com>

	Fixes bug #322083, suggestions from dmacks@netspace.org.

	* daemon/auth.c, vicious-extensions/glade-helper.c:
	  Include stdlib.h to avoid warnings.
	* gui/gdmchooser.c, gui/greeter/greeter.c: Remove
	  gdm_kill_thingies reference since it is unused.
	* gui/gdmsetup.c: Add missing "static void" to
	  include_all_toggle function.

2005-11-16  Brian Cameron <Brian.Cameron@sun.com>

        * daemon/getvt.c: Fix #ifdef's.

2005-11-15  Brian Cameron <Brian.Cameron@sun.com>

        * daemon/getvt.c: Change made on 11/03 to make
          GDM use VT_GETSTATE for peeking VT freeness broke
          BSD builds.  Put back code for BSD.  Linux will
          continue to use VT_GETSTATE.  Fixes bug #321493.

2005-11-14  Brian Cameron <Brian.Cameron@sun.com>

	* Release 2.8.0.6.
	* configure.in, NEWS: Updated.
	* docs/C/gdm.xml: Updated version/date.

2005-11-11  Brian Cameron  <brian.cameron@sun.com>

	* configure.in: Update check for socklen_t so it
	  includes sys/socket.h.  Some platforms define
	  socklen_t there.  Patch provided by 
	  dmacks@netspace.org.  Fixes bug #320930.

2005-11-04  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac: Fix check for XInput and add a check
	  for libgen.h.  Fixes bugs #320580 and #320581.

2005-11-03  Brian Cameron  <brian.cameron@sun.com>

	* gui/modules/Makefile.am, gui/modules/keymouselistener.c,